WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291828
[subpixel] Divider between bold and italics is missing
https://bugs.webkit.org/show_bug.cgi?id=291828
Summary
[subpixel] Divider between bold and italics is missing
alan
Reported
2025-04-20 12:59:03 PDT
<
rdar://146996813
>
Attachments
Patch
(3.26 KB, patch)
2025-04-20 13:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.44 KB, patch)
2025-04-20 19:22 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.26 KB, patch)
2025-04-22 15:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.43 KB, patch)
2025-04-26 08:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.13 KB, patch)
2025-04-26 13:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.13 KB, patch)
2025-04-27 13:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.13 KB, patch)
2025-04-29 18:35 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-04-20 13:01:41 PDT
Created
attachment 474985
[details]
Patch
alan
Comment 2
2025-04-20 13:02:34 PDT
maybe top left should be adjusted as well?
alan
Comment 3
2025-04-20 19:22:33 PDT
Created
attachment 474989
[details]
Patch
alan
Comment 4
2025-04-22 15:22:41 PDT
Created
attachment 475012
[details]
Patch
alan
Comment 5
2025-04-26 08:51:41 PDT
Created
attachment 475053
[details]
Patch
alan
Comment 6
2025-04-26 13:13:03 PDT
Created
attachment 475054
[details]
Patch
alan
Comment 7
2025-04-27 13:25:42 PDT
Created
attachment 475058
[details]
Patch
alan
Comment 8
2025-04-29 18:35:10 PDT
Created
attachment 475086
[details]
[fast-cq]Patch
EWS
Comment 9
2025-04-30 05:17:56 PDT
Committed
294329@main
(aa9b653ffc78): <
https://commits.webkit.org/294329@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 475086
[details]
.
EWS
Comment 10
2025-05-09 11:22:21 PDT
Committed
289651.493@safari-7621-branch
(f88ef4d178f8): <
https://commits.webkit.org/289651.493@safari-7621-branch
> Reviewed commits have been landed. Closing PR #3068 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug