[subpixel] Divider between bold and italics is missing https://bugs.webkit.org/show_bug.cgi?id=291828 <rdar://146996813>

Reviewed by Simon Fraser.

Clip rect is meant to snapped to device pixels, while layer size is integral.
Let's use the associated renderer's border box size instead.

* LayoutTests/fast/hidpi/hidpi-nested-layers-missing-content-expected.html: Added.
* LayoutTests/fast/hidpi/hidpi-nested-layers-missing-content.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::computeLayerPositionAndIntegralSize):

Canonical link: https://commits.webkit.org/294329@main